<!--
/*
** Copyright 2014 Antew
**
** Licensed under the Apache License, Version 2.0 (the "License");
** you may not use this file except in compliance with the License.
** You may obtain a copy of the License at
**
**     http://www.apache.org/licenses/LICENSE-2.0
**
** Unless required by applicable law or agreed to in writing, software
** distributed under the License is distributed on an "AS IS" BASIS,
** WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
** See the License for the specific language governing permissions and
** limitations under the License.
*/
-->
<resources>

    <string name="app_name">Reddit In Pictures Free</string>

    <string name="disable_ads">Disable ads</string>
    <string name="upgrade_to_pro">Upgrade to Pro</string>
    <string name="feature_not_available">Feature not available</string>
    <string name="upgrade_value_prop">Upgrading to the pro version will allow you to log in, cast votes, view and manage your subreddits, get access to new features first, and more!</string>
    <string name="in_exchange_for_disabling_ads">In exchange for disabling ads, we ask that you rate the application on the Google Play store. Thank you for your support!</string>
    <string name="upgrade_value_prop_prefs">Upgrading to the pro version will help support future development and allow you to log in, cast votes, view and manage your subreddits, get access to new features first, and more!</string>

    <string name="ive_rated_it">I\'ve Rated It</string>

    <!-- Shared Preferences Keys -->
    <string name="pref_disable_ads">disableAds</string>
    <string name="pref_get_pro_version">getProVersion</string>
    <!-- End Shared Preferences Keys -->
    

</resources>